LOG New version 4.0.3, spec cleanup

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "res-release-3.2.0.tar.bz2": ecddc0386ad02bc94cd46787fff7f262c3a8ca68
+  res-4.0.3.tar.gz: a2eb656c1294982b9ba3e9f0e6c5ae8f893df57d
